Ajustes hechos para la 2da reunion

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<ul class="nav navbar-nav navbar-right">
 				<li class="active"><a href="index.html">Inicio</a></li>
 				<li><a href="about.html">Quienes somos</a></li>
-				<li><a href="gallery.html">Producto</a></li>
+				<li><a href="gallery.php">Producto</a></li>
 				<li><a href="contact.html">Contáctenos</a></li>
 				<li><a href="./sistema/index.php">Ingresar</a></li>
 				<li><a href="gallery.html#registroForm">Registrarse</a></li>
